NXP-27947: improve code after remarks / commit will be squashed